<resources>
    <string name="app_name">Crud Sql Mvvm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="precio">Precio</string>
    <string name="codigo">Codigo</string>
    <string name="contentDescription">-</string>
    <string name="titulo">Titulo</string>
    <string name="buscar">Buscar</string>
    <string name="descripcion">Descripcion</string>
    <string name="codigo_barra">Codigo de barra</string>
    <string name="costo">Costo</string>
    <string name="ip_server">Ip Server (192.168.1.77)</string>
    <string name="puerto">Puerto (1433)</string>
    <string name="usuario_del_servidor">User</string>
    <string name="password">Password</string>
    <string name="menu_producto">Productos</string>
    <string name="stock">Stock</string>
</resources>